Typo, Changes Docs

--- a/docs/paper/paper.bib
+++ b/docs/paper/paper.bib
@@ -150,3 +150,25 @@ series = {StreamKDD '10}
   month = nov,
   pages = {4255–4271}
 }
+
+@inproceedings{Tibshirani2019,
+ author = {Tibshirani, Ryan J and Foygel Barber, Rina and Candes, Emmanuel and Ramdas, Aaditya},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {H. Wallach and H. Larochelle and A. Beygelzimer and F. d\textquotesingle Alch\'{e}-Buc and E. Fox and R. Garnett},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {Conformal Prediction Under Covariate Shift},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2019/file/8fb21ee7a2207526da55a679f0332de2-Paper.pdf},
+ volume = {32},
+ year = {2019}
+}
+
+@misc{Jon2023,
+      title={Model-free selective inference under covariate shift via weighted conformal p-values},
+      author={Ying Jin and Emmanuel J. Candès},
+      year={2023},
+      eprint={2307.09291},
+      archivePrefix={arXiv},
+      primaryClass={stat.ME},
+      url={https://arxiv.org/abs/2307.09291},
+}
